@@ -2377,7 +2377,7 @@ and the result replaces the key.
 </para>
 
 <example_commands xmlns="http://www.scons.org/dbxsd/v1.0">
-env = Environment(tools = ['default', 'textfile'])
+env = Environment(tools=['default'])
 
 env['prefix'] = '/usr/bin'
 script_dict = {'@prefix@': '/bin', '@exec_prefix@': '$prefix'}
@@ -2404,7 +2404,7 @@ env.Substfile('bar.in', SUBST_DICT = good_bar)
 
 # the SUBST_DICT may be in common (and not an override)
 substutions = {}
-subst = Environment(tools = ['textfile'], SUBST_DICT = substitutions)
+subst = Environment(tools=['textfile'], SUBST_DICT=substitutions)
 substitutions['@foo@'] = 'foo'
 subst['SUBST_DICT']['@bar@'] = 'bar'
 subst.Substfile('pgm1.c', [Value('#include "@foo@.h"'),
