@@ -1197,6 +1197,10 @@ Multiple calls to
 <function xmlns="http://www.scons.org/dbxsd/v1.0">Default</function>
 are legal,
 and add to the list of default targets.
+As noted above, both forms of this call affect the
+same global list of default targets; the
+construction environment method applies
+construction variable expansion to the targets.
 </para>
 
 <para xmlns="http://www.scons.org/dbxsd/v1.0">
